# cpp_indie_studio

./: .gdb_history  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Vector3d.cpp  caca  caca.cpp  install  install_manifest.txt  manque.txt  manque.txt~  map01.txt  map02.txt  segfault  todo  toto
ButtonGFX/: vbutton.psd  vbuttonhovered.psd
IA/include/: Ia.hpp  Ia.hpp~  Strategy.hpp  Strategy.hpp~
IA/scripts/: attack.lua  attack.lua~  hide.lua  hide.lua~
IA/srcs/: Hide.cpp  Ia.cpp  Ia.cpp~  Strategy.cpp  Strategy.cpp~
Interface/: IGameEngine.hpp  IGameState.hpp
examples/04.Movement/: main.cpp
gfx/: bomb2.mtl
include/: Block.hpp  Bomb.hpp  BombsManager.hpp  Button.hpp  Camera.hpp  Character.hpp  ChoosePlayerEventReceiver.hpp  ChoosePlayerState.hpp  ChooseSkinState.hpp  Fire.hpp  Game.hpp  GameEngine.hpp  GameEventReceiver.hpp  GameState.hpp  GenerateMap.hpp  IndieStudioException.hpp  IntroEventReceiver.hpp  IntroState.hpp  MenuEventReceiver.hpp  MenuState.hpp  Options.hpp  OptionsEventReceiver.hpp  OptionsState.hpp  PauseEventReceiver.hpp  PauseState.hpp  Player.hpp  PowerUp.hpp  PowerUpManager.hpp  ScoreEnd.hpp  ScoreEndEventReceiver.hpp  map.hpp
launcher/: cpp_indie_studio
map/: CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt~  IObject.hpp  IObject.hpp~  Vector3d.cpp~  Vector3d.hpp~  log  main.cpp  main.cpp~  map.cbp  map01.txt  map01.txt~  toto
map/benjo/: CMakeLists.txt  map02.txt
map/benjo/backup/: CMakeLists.txt
map/benjo/backup/srcs/: Fire.cpp  ObjectMap.cpp  PlanetSystem.hpp  main.cpp
map/benjo/backup/srcs/include/: ObjectMap.hpp
map/benjo/include/: Block.hpp  Game.hpp  ParseMap.hpp  PlanetSystem.hpp  map.hpp
map/benjo/srcs/: Fire.cpp  Fire.hpp  Game.cpp  MapIndie.cpp  ObjectMap.cpp  ParseMap.cpp  PlanetSystem.cpp  PlanetSystem.hpp  Vector3d.cpp  main.cpp  map.cpp
map/benjo/srcs/include/: IObject.hpp  Vector3d.hpp
map/benjo/theo_the_teddy/: theo_the_teddybear.mtl
map/flo/: Block.cpp  Bombs.cpp  Bombs.cpp~  Bombs.hpp~  CMakeLists.txt  Game.cpp  Game.hpp  ParseMap.cpp~  ParseMap.hpp~  caca.cpp  main.cpp~  main.c~  main2.cpp  main2.cpp~  map.cpp  map.hpp  map01.txt  map02.txt~
map/gfx/: bomb1.mtl  plan-2.mtl
map/include/: Block.hpp  Bomb.hpp  Bombs.hpp  BombsManager.hpp  Camera.hpp  Character.hpp  Fire.hpp  Game.hpp  GameEventReceiver.hpp  GenerateMap.hpp  PlanetSystem.hpp  PowerUp.hpp  PowerUpManager.hpp  Sound.hpp  Vector3d.hpp  map.hpp
map/powersUp/mushroom/: supermushroom.mtl
map/srcs/: Block.cpp  Bomb.cpp  Bombs.cpp  BombsManager.cpp  BombsT.cpp  BombsT.hpp  Camera.cpp  Character.cpp  Fire.cpp  Fire.hpp  Game.cpp  GameEventReceiver.cpp  GenerateMap.cpp  MapIndie.cpp  MapIndie.cpp~  ObjectMap.cpp  ObjectMap.cpp~  Objects.cpp~  PlanetSystem.cpp  PowerUp.cpp  PowerUpManager.cpp  Sound.cpp  Vector3d.cpp  main.cpp  map.cpp
map/srcs/include/: MapIndie.hpp  MapIndie.hpp~  ObjectMap.hpp~  Objects.hpp~
models/bomb/: bomb.mtl
models/player/cartman/: green.pcx
models/player/kenny/: kenny.pcx
models/player/kyle/: kyle.pcx  tris.md2
models/player/marvin/: skin.pcx
models/player/power/: battery.mtl  mese.mtl
models/player/stan/: stan.pcx  tris.md2
src/: Block.cpp  Bomb.cpp  BombsManager.cpp  Button.cpp  Button.hpp  Camera.cpp  Character.cpp  ChoosePlayerEventReceiver.cpp  ChoosePlayerState.cpp  ChooseSkinState.cpp  ChooseSkinState.hpp  ChooseSkinStateEventReceiver.cpp  ChooseSkinStateEventReceiver.hpp  Fire.cpp  Game.cpp  GameEngine.cpp  GameEngine.hpp  GameEventReceiver.cpp  GameMenu.cpp  GameMenu.hpp  GameState.cpp  GameState.hpp  GenerateMap.cpp  IndieStudioException.cpp  IntroEventReceiver.cpp  IntroState.cpp  IntroState.hpp  MenuEventReceiver.cpp  MenuEventReceiver.hpp  MenuState.cpp  MenuState.hpp  Options.cpp  Options.hpp  OptionsEventReceiver.cpp  OptionsEventReceiver.hpp  OptionsState.cpp  OptionsState.hpp  ParseMap.cpp  PauseEventReceiver.cpp  PauseEventReceiver.hpp  (+13 more)
